--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -7,14 +7,15 @@ body {
   width: 100vw;
   height: 100vh;
   text-align: center;
-  font-family: sans-serif;
+  font-size: 2vw;
   display: flex;
   flex-direction: column;
   background-color: $primary;
+  font-family: "Open Sans", sans-serif;
 
   header {
     background-color: $dark;
-    height: 10vh;
+    height: 7vh;
     width: 100%;
     font-family: "Open Sans", sans-serif;
     display: flex;
@@ -23,6 +24,7 @@ body {
     justify-content: center;
     padding-left: 5%;
     color: $light;
+    font-size: 0.5em;
   }
 }
 h1,
@@ -31,5 +33,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Days One", sans-serif;
+  font-family: "Raleway", sans-serif;
+  font-weight: 900;
+}
+.card {
+  display: inline-block;
+  border: 1px solid $dark;
 }
