--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -6,13 +6,14 @@ body {
   width: 100vw;
   height: 100vh;
   text-align: center;
-  font-family: sans-serif;
+  font-size: 2vw;
   display: flex;
   flex-direction: column;
-  background-color: #41a1ff; }
+  background-color: #fff;
+  font-family: "Open Sans", sans-serif; }
   body header {
-    background-color: #333;
-    height: 10vh;
+    background-color: #000;
+    height: 7vh;
     width: 100%;
     font-family: "Open Sans", sans-serif;
     display: flex;
@@ -20,7 +21,8 @@ body {
     text-align: left;
     justify-content: center;
     padding-left: 5%;
-    color: #eee; }
+    color: #eee;
+    font-size: 0.5em; }
 
 h1,
 h2,
@@ -28,4 +30,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Days One", sans-serif; }
+  font-family: "Raleway", sans-serif;
+  font-weight: 900; }
+
+.card {
+  display: inline-block;
+  border: 1px solid #000; }
