--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -1,27 +1,20 @@
-@import "variables.scss";
-
 main {
   display: flex;
   width: 100%;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
-}
+  align-items: center; }
 
 .page-header {
-  max-width: 30%;
-  h2 {
+  max-width: 30%; }
+  .page-header h2 {
     text-transform: uppercase;
-    font-size: 2em;
-  }
-  hr {
+    font-size: 2em; }
+  .page-header hr {
     width: 60%;
     margin: auto;
     border-top: 0.2vw solid;
-    box-shadow: 0px 5px 15px 0px #000;
-  }
-}
+    box-shadow: 0px 5px 15px 0px #000; }
 
 p {
-  font-size: 1em;
-}
+  font-size: 1em; }
