--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -36,7 +36,12 @@ h6 {
   font-family: "Raleway", sans-serif;
   font-weight: 900;
 }
-.card {
+.card-container {
+  margin: 1em;
+}
+.emoji-card {
   display: inline-block;
-  border: 1px solid $dark;
+  border: 1px solid $light;
+  padding: 0.5em;
+  font-size: 5em;
 }
