--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -33,6 +33,11 @@ h6 {
   font-family: "Raleway", sans-serif;
   font-weight: 900; }
 
-.card {
+.card-container {
+  margin: 1em; }
+
+.emoji-card {
   display: inline-block;
-  border: 1px solid #000; }
+  border: 1px solid #eee;
+  padding: 0.5em;
+  font-size: 5em; }
