--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -1,11 +1,35 @@
+.bg {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  z-index: -1; }
+  .bg .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    min-width: 50%;
+    min-height: 50%;
+    background-image: url(https://images.unsplash.com/photo-1442120108414-42e7ea50d0b5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=88ed2e2c4060869e039f95d361a24a8b&auto=format&fit=crop&w=1718&q=80);
+    background-size: cover;
+    background-position: center;
+    background-color: lightblue;
+    background-blend-mode: darken; }
+
 main {
   display: flex;
   width: 100%;
   justify-content: center;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  color: #eee; }
 
 .page-header {
+  margin-top: 2em;
   max-width: 30%; }
   .page-header h2 {
     text-transform: uppercase;
@@ -18,3 +42,9 @@ main {
 
 p {
   font-size: 1em; }
+
+.link-cards {
+  margin-top: 1em;
+  display: flex;
+  justify-content: space-around;
+  width: 60%; }
