--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -40,4 +40,7 @@ h6 {
   display: inline-block;
   border: 1px solid #eee;
   padding: 0.5em;
-  font-size: 5em; }
+  font-size: 5em;
+  -webkit-box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.6);
+  -moz-box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.6);
+  box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.6); }
