--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -2,6 +2,23 @@
   margin: 0px;
   padding: 0px; }
 
+.bg {
+  position: fixed;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  z-index: -1; }
+  .bg .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    min-width: 50%;
+    min-height: 50%; }
+
 body {
   width: 100vw;
   height: 100vh;
@@ -41,6 +58,5 @@ h6 {
   border: 1px solid #eee;
   padding: 0.5em;
   font-size: 5em;
-  -webkit-box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.6);
-  -moz-box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.6);
+  background: rgba(238, 238, 238, 0.5);
   box-shadow: 0px 5px 15px 0px rgba(50, 50, 50, 0.6); }
