--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -31,6 +31,7 @@ body {
   flex-direction: column;
   background-color: $primary;
   font-family: "Open Sans", sans-serif;
+  text-shadow: 0 3px 6px $dark;
 
   header {
     background-color: $dark;
@@ -57,6 +58,9 @@ h6 {
 }
 .card-container {
   margin: 1em;
+  h3 {
+    margin-bottom: 0.5em;
+  }
 }
 .emoji-card {
   display: inline-block;
