--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -27,7 +27,8 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", sans-serif;
+  text-shadow: 0 3px 6px #000; }
   body header {
     background-color: #000;
     height: 7vh;
@@ -52,6 +53,8 @@ h6 {
 
 .card-container {
   margin: 1em; }
+  .card-container h3 {
+    margin-bottom: 0.5em; }
 
 .emoji-card {
   display: inline-block;
