--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -47,6 +47,7 @@ body {
     font-size: 0.5em;
     a {
       color: $light;
+      text-decoration: none;
     }
   }
 }
@@ -63,6 +64,10 @@ h6 {
   margin: 1em;
   h3 {
     margin-bottom: 0.5em;
+  }
+  a {
+    color: $light;
+    text-decoration: none;
   }
 }
 .emoji-card {
