--- a/client/styles/index.css
+++ b/client/styles/index.css
@@ -42,7 +42,8 @@ body {
     color: #eee;
     font-size: 0.5em; }
     body header a {
-      color: #eee; }
+      color: #eee;
+      text-decoration: none; }
 
 h1,
 h2,
@@ -57,6 +58,9 @@ h6 {
   margin: 1em; }
   .card-container h3 {
     margin-bottom: 0.5em; }
+  .card-container a {
+    color: #eee;
+    text-decoration: none; }
 
 .emoji-card {
   display: inline-block;
